[gd_scene load_steps=8 format=2]

[ext_resource path="res://Loony_Lips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 35
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="GDScript" id=2]

script/source = "extends RichTextLabel

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	# Called when the node is added to the scene for the first time.
	# Initialization here
	pass

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass
"

[node name="Loony_Lips" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Blackboard" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1020.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="StoryText" type="RichTextLabel" parent="Blackboard" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 23.0
margin_top = 21.0
margin_right = 1002.0
margin_bottom = 496.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "StoryText"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_fonts" ]

[node name="Textbox" type="LineEdit" parent="Blackboard" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 517.0
margin_right = 745.0
margin_bottom = 582.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "TextBox"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="TextureButton" type="TextureButton" parent="Blackboard" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 768.0
margin_top = 524.0
margin_right = 817.0
margin_bottom = 573.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]
__meta__ = {
"_edit_group_": true
}

[node name="ButtonLabel" type="RichTextLabel" parent="Blackboard/TextureButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = -3.0
margin_right = 201.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "OK!"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = SubResource( 2 )
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[connection signal="text_entered" from="Blackboard/Textbox" to="." method="_on_Textbox_text_entered"]

[connection signal="pressed" from="Blackboard/TextureButton" to="." method="_on_TextureButton_pressed"]


